--- a/demo4.csproj
+++ b/demo4.csproj
@@ -3,12 +3,13 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <DotNetCliToolReference Include="Tmds.DBus.Tool" Version="0.1.0-*" />
+    <DotNetCliToolReference Include="Tmds.DBus.Tool" Version="0.5.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Tmds.DBus" Version="0.4.0" />
+    <PackageReference Include="Tmds.DBus" Version="0.5.0" />
   </ItemGroup>
 
 </Project>
